# jaspSyntax

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.win
.github/workflows/: build-syntaxinterface.yml  i18nCheck.yml
R/: RcppExports.R  bridgeSubprocess.R  lifecycle.R  options.R  readDatasetFromJaspFile.R  resultDecoding.R  zzz.R
man/: clearQmlForms.Rd  datasetBridgeHelpers.Rd  decodeAnalysisResults.Rd  jaspSyntax-package.Rd  nativeBridge.Rd  nativeBridgeProvenance.Rd  parseQmlOptions.Rd  readAnalysisOptionsFromJaspFile.Rd  readAnalysisOptionsFromQml.Rd  readDatasetFromJaspFile.Rd  readDefaultAnalysisOptions.Rd  readModuleDescription.Rd  resolveAnalysisQml.Rd
src/: Makevars.in  RcppExports.cpp  dataframeimporter.cpp  dataframeimporter.h  install.libs.R  syntaxfunctions.cpp
src/backend/src/: CMakeLists.txt  Dummy.qml  syntaxBackend.cpp  syntaxBackend.h
tests/: testthat.R
tests/testthat/: test-dataset-helpers.R  test-desktop-jasp-contract.R  test-jasp-file-options.R  test-module-options.R
tests/testthat/fixtures/descriptivesReplayModule/: DESCRIPTION
tests/testthat/fixtures/descriptivesReplayModule/inst/: Description.qml
tests/testthat/fixtures/descriptivesReplayModule/inst/qml/: Descriptives.qml
tests/testthat/fixtures/minimalModule/: DESCRIPTION  NAMESPACE
tests/testthat/fixtures/minimalModule/inst/: Description.qml
tests/testthat/fixtures/minimalModule/inst/qml/: DefaultAnalysis.qml  MinimalAnalysis.qml  VariableAnalysis.qml
tools/: check-syntaxinterface-symbols.sh
